gImageReader 3.1.1 (Jun 11 2015):
 * Fix titlebar now shown when window maximized in Gnome 3
 * New translations: Chinese (Hong Kong), Chinese (Taiwan)
 * Updated translations: Russian, Portoguese

gImageReader 3.1 (May 1 2015):
 * Add option to draw whitespace
 * Allow searching and replacing only in selected portion of output text
 * Add "preserve paragraphs" postprocessing option
 * Allow to open files via drag and drop
 * Improve rendering of certain PDF files with the Qt interface
 * Fix scanning broken with certain scanners under Windows
 * Support automatic spelling dictionary installation under Windows
 * Allow saving scans in other formats than png
 * Handful of bugs fixed
 * Full details in commit log: https://github.com/manisandro/gImageReader/commits/master

gImageReader 3.0.1 (Jan 4 2015):
 * Fix a bug in the Qt interface when loading substitutions list from file
 * Improve behaviour of strip line breaks functionality with multiple line breaks
 * Small UI improvements
 * Full details in commit log: https://github.com/manisandro/gImageReader/commits/master
 
gImageReader 3.0 (Dec 12 2014):
 * gImageReader 3.0 stable
 * New Qt4/5 interface, as alternative to the Gtk interface
 * Fixed scanning on Windows
 * Memorize image settings (brightness, contrast, etc) when switching images
 * Search forward and backward, replace all, case sensitive search
 * Many bug fixes
 * Translation updates
 * Full details in commit log: https://github.com/manisandro/gImageReader/commits/master
 
gImageReader 2.93 (Apr 30 2014):
 * gImageReader 3.0 beta 4
 * Add possibility to choose multiple recognition languages
 * Add button to show/hide output pane
 * Fix a crash when loading a scanned document
 * Allow toggling spell checking from context menu
 * Full details in commit log: https://github.com/manisandro/gImageReader/commits/master

gImageReader 2.92 (Mar 19 2014):
 * gImageReader 3.0 beta 3